tests/negative/gold/import3-test.gold
tests/negative/import3-test.toit:5:24: error: Name clash with toplevel declaration 'foo'
import .import3-a show foo
                       ^~~
tests/negative/import3-test.toit:7:1: note: Toplevel declaration of 'foo'
foo:
^~~
Compilation failed
